--- a/index.html
+++ b/index.html
@@ -10,100 +10,132 @@
   <body>
     <header>
       <nav>
-        <a lang="en" href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a lang="en" href="./index.html" class="logo"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
+        >
+        <ul class="site-nav">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contacts">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <!-- Hero -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="section hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
       <!-- features -->
-      <section>
+      <section class="section">
         <h2>Особенности</h2>
-        <ul>
+        <ul class="future-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="title">Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3 class="title">Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!-- what we do -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img width="370" src="./images/box1.jpg" alt="рабочий стол руки на клавиатуре" />
+            <img
+              width="370"
+              src="./images/box1.jpg"
+              alt="рабочий стол руки на клавиатуре"
+            />
           </li>
           <li>
-            <img width="370" src="./images/box2.jpg" alt="ноутбук на столе и рука на нем" />
+            <img
+              width="370"
+              src="./images/box2.jpg"
+              alt="ноутбук на столе и рука на нем"
+            />
           </li>
           <li>
-            <img width="370" src="./images/box3.jpg" alt="рука держит планшет" />
+            <img
+              width="370"
+              src="./images/box3.jpg"
+              alt="рука держит планшет"
+            />
           </li>
         </ul>
       </section>
 
       <!-- team -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img width="270" src="./images/employee01.jpg" alt="мужчина" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
             <img width="270" src="./images/employee02.jpg" alt="женщина" />
-            <h3>Ольга Репина</h3>
+            <h3 class="title">Ольга Репина</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img width="270" src="./images/employee03.jpg" alt="мужчина" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
             <img width="270" src="./images/employee04.jpg" alt="мужчина" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="title">Михаил Ермаков</h3>
             <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="WebStudio"></a>
+      <a lang="en" href="./index.html" class="logo"
+        ><span class="logo-web">Web</span
+        ><span class="logo-studio-footer">Studio</span></a
+      >
       <address>
         <ul>
-          <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-          <li><a href="mailto:info@example.com"></a>info@example.com</li>
-          <li><a href="tel:380991111111">+38 099 111 11 11</a></li>
+          <li><p class="address-city">г. Киев, пр-т Леси Украинки, 26</p></li>
+          <li>
+            <a href="mailto:info@example.com" class="address-mail"
+              >info@example.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:380991111111" class="address-tel">+38 099 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
