--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,7 @@
     <main>
       <!-- portfolio -->
       <section>
+        <h1>Портфолио</h1>
         <ul>
           <li><button type="button">Все</button></li>
           <li><button type="button">Веб-сайты</button></li>
@@ -34,54 +35,56 @@
         <ul>
           <li>
             <img width="370" src="./images/tehno.jpg" alt="ноутбук" />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img width="370" src="./images/neworlean.jpg" alt="баскетболисты" />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img width="370" src="./images/seafood.jpg" alt="логотип ресторана" />
-            <h3>Ресторан Seafood</h3>
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
             <p>Приложение</p>
           </li>
           <li>
             <img width="370" src="./images/prime.jpg" alt="наушники" />
-            <h3>Проект Prime</h3>
+            <h2>Проект <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img width="370" src="./images/boxes.jpg" alt="коробки" />
-            <h3>Проект Boxes</h3>
+            <h2>Проект <span lang="en">Boxes</span></h2>
             <p>Приложение</p>
           </li>
           <li>
             <img width="370" src="./images/inspiration.jpg" alt="монитор" />
-            <h3 lang="en">Inspiration has no Borders</h3>
+            <h2 lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img width="370" src="./images/limitededition.jpg" alt="открытая книга" />
-            <h3>Издание Limited Edition</h3>
+            <h2>Издание <span lang="en">Limited Edition</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img width="370" src="./images/lab.jpg" alt="бирка" />
-            <h3>Проект LAB</h3>
+            <h2>Проект <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img width="370" src="./images/growingbusiness.jpg" alt="открытый ноутбук" />
-            <h3>Growing Business</h3>
+            <h2 lang="en">Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="WebStudio"></a>
+      <a lang="en" href="./index.html" class="logo"
+        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+      >
       <address>
         <ul>
           <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
