--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <a lang="en" href="./index.html" class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+          ><span class="logo logo-web">Web</span
+          ><span class="logo logo-studio">Studio</span></a
         >
         <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./index.html" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -27,12 +39,14 @@
     </header>
     <main>
       <!-- Hero -->
-      <section class="section hero">
+      <section class="section-hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button hero-button">
+          Заказать услугу
+        </button>
       </section>
       <!-- features -->
-      <section class="section">
+      <section class="section-features">
         <h2>Особенности</h2>
         <ul class="future-list">
           <li>
@@ -66,8 +80,8 @@
         </ul>
       </section>
       <!-- what we do -->
-      <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
+      <section class="section-we">
+        <h2 class="title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -94,8 +108,8 @@
       </section>
 
       <!-- team -->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
+      <section class="section-team">
+        <h2 class="section-team-title">Наша команда</h2>
         <ul class="team-list">
           <li>
             <img width="270" src="./images/employee01.jpg" alt="мужчина" />
@@ -109,7 +123,7 @@
           </li>
           <li>
             <img width="270" src="./images/employee03.jpg" alt="мужчина" />
-            <h3 class="title">Игорь Демьяненко</h3>
+            <h3 class="title">Николай Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
@@ -127,14 +141,18 @@
       >
       <address>
         <ul>
-          <li><p class="address-city">г. Киев, пр-т Леси Украинки, 26</p></li>
           <li>
-            <a href="mailto:info@example.com" class="address-mail"
+            <p class="address address-city">г. Киев, пр-т Леси Украинки, 26</p>
+          </li>
+          <li>
+            <a href="mailto:info@example.com" class="address address-mail"
               >info@example.com</a
             >
           </li>
           <li>
-            <a href="tel:380991111111" class="address-tel">+38 099 111 11 11</a>
+            <a href="tel:380991111111" class="address address-tel"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
