--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </section>
       <!-- what we do -->
       <section class="section-we">
-        <h2 class="title">Чем мы занимаемся</h2>
+        <h2 class="section-we-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -114,22 +114,22 @@
           <li>
             <img width="270" src="./images/employee01.jpg" alt="мужчина" />
             <h3 class="title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <p lang="en" class="team-position">Product Designer</p>
           </li>
           <li>
             <img width="270" src="./images/employee02.jpg" alt="женщина" />
             <h3 class="title">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <p lang="en" class="team-position">Frontend Developer</p>
           </li>
           <li>
             <img width="270" src="./images/employee03.jpg" alt="мужчина" />
             <h3 class="title">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <p lang="en" class="team-position">Marketing</p>
           </li>
           <li>
             <img width="270" src="./images/employee04.jpg" alt="мужчина" />
             <h3 class="title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <p lang="en" class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
